Add pysam to requirements

--- a/environment.yml
+++ b/environment.yml
@@ -15,3 +15,4 @@ dependencies:
 - pip:
   - https://bitbucket.org/mirnylab/mirnylib/get/tip.tar.gz
   - git+git://github.com/mirnylab/cooler.git
+  - pysam
