--- a/environment.yml
+++ b/environment.yml
@@ -1,30 +1,16 @@
 name: cooler_binder
 channels:
-  - conda-forge
-  - defaults
   - bioconda
 dependencies:
-- python=3.6
-- six
-- nose
-- mock
+- python=3.8
 - numpy
-- scipy
 - cython
+- ipython
 - h5py
-- pandas
-- numba
-- cytoolz
-- jupyter
-- ipywidgets
-- dask
-- matplotlib
-- seaborn
-- pysam
-- pyfaidx
-- pairix
-- pip>=7.1
+- pip
 - pip:
-  - https://bitbucket.org/mirnylab/mirnylib/get/tip.tar.gz
   - cooler
-
+  - dask[array,dataframe]
+  - matplotlib
+  - pandas
+  - seaborn
