--- a/environment.yml
+++ b/environment.yml
@@ -2,11 +2,12 @@ name: cooler_binder
 channels:
   - bioconda
 dependencies:
-- python=3.8
+- python=3.7
 - numpy
 - cython
 - ipython
 - h5py
+- pairix
 - pip
 - pip:
   - cooler
